--- a/styles.css
+++ b/styles.css
@@ -116,9 +116,20 @@ section {
 
 .contact-text,
 .contact-details {
-    width: 50%; /* 50% width on larger screens */
+    flex: 1; /* Take up available space */
     box-sizing: border-box; /* Include padding and border in width */
     padding: 10px; /* Add some padding for spacing */
+}
+
+.contact-image{
+    box-sizing: border-box; /* Include padding and border in width */
+    padding: 10px; /* Add some padding for spacing */
+}
+
+.contact-image img {
+    width: 100%; /* Make the image fill its container */
+    height: auto;
+    display: block;
 }
 
 /* Responsive Styles */
@@ -149,6 +160,10 @@ section {
     flex: 1; /* Take up remaining space */
     border: 1px solid #f0f0f0;
     border-radius: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-direction: column; /* Arrange items in a column */
 }
 
 .contact-item {
@@ -235,6 +250,11 @@ section {
     border-radius: 5%;
 }
 
+.icon-grid-svg {
+    width: 85px;
+    height: 85px;
+}
+
 .icon-image-container {
     /* Allow space for image */
     display: flex;
@@ -269,4 +289,10 @@ footer {
     text-align: center;
     padding: 5px;
     background-color: #f0f0f0;
+}
+
+/* Modified CSS for contact-text and about-image overlay */
+
+.contact-container {
+    flex: 1;
 }
