--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html, body {
     padding: 10px;
     margin-inline: auto;
     scroll-margin-top: 80px; /* Adjust this value to match your header height */
+    align-items: center;
 }
 
 header {
@@ -221,42 +222,32 @@ section {
     text-decoration: none;
 }
 
-
-.map-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
 .icon-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 25vw)); /* Adjusted minmax */
+    gap: 15px; /* Adjusted gap */
+    margin: 0 auto;
+    align-items: center;
 }
 
 .icon-grid-item {
-    position: relative; /* Needed for absolute positioning of text */
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; /* Align items to the top */
+    justify-content: flex-start;
     border: 1px solid #ddd;
-    padding: 15px;
     text-align: center;
-    min-height: 150px;
+    min-height: 20vh; /* Adjusted min-height */
     border-radius: 5%;
 }
 
 .icon-grid-svg {
-    width: 85px;
-    height: 85px;
+    width: 80%; /* Adjusted svg width */
+    height: 80%; /* Adjusted svg height */
 }
 
 .icon-image-container {
-    /* Allow space for image */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -264,14 +255,15 @@ section {
 }
 
 .icon-grid-item img {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: clamp(50px, 15vw, 100px); /* Dynamic image size */
+    max-height: clamp(50px, 15vh, 100px); /* Dynamic image size */
     object-fit: contain;
 }
 
 .icon-text-container {
     position: absolute;
-    bottom: 10px; /* Adjust as needed */
+    font-size: clamp(12px, 3vw, 18px); /* Dynamic font size */
+    bottom: 5px; /* Adjusted bottom position */
     left: 0;
     right: 0;
     text-align: center;
@@ -280,10 +272,6 @@ section {
 .icon-text-container p {
     margin: 0;
 }
-/* Optional: Add hover effects */
-/* .icon-grid-item:hover {
-    background-color: #f9f9f9;
-} */
 
 footer {
     text-align: center;
